--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editar cliente</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Ver', @cliente %> |
-<%= link_to 'Voltar', clientes_path %>
+<%- model_class = Cliente -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
