--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,31 +1,62 @@
-<h1>Lista de clientes</h1>
-
-<table>
+<%- model_class = Cliente -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Cartao</th>
-      <th>Nome</th>
-      <th>Grupocliente</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:cartao) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= Loja %></th>
+      <!--><th><%= model_class.human_attribute_name(:data_nasc) %></th>
+      <th><%= model_class.human_attribute_name(:obs) %></th>
+      <th><%= model_class.human_attribute_name(:rua) %></th>
+      <th><%= model_class.human_attribute_name(:acumulado) %></th>
+      <th><%= model_class.human_attribute_name(:activo) %></th>
+      <th><%= model_class.human_attribute_name(:profissao_id) %></th>
+      <th><%= model_class.human_attribute_name(:grupocliente_id) %></th>
+      <th><%= model_class.human_attribute_name(:localidade_id) %></th>
+      <th><%= model_class.human_attribute_name(:loja_id) %></th>
+      <th><%= model_class.human_attribute_name(:vendedor_id) %></th>
+      <th><%= model_class.human_attribute_name(:sexo_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th></-->
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @clientes.each do |cliente| %>
       <tr>
-        <td><%= cliente.cartao %></td>
+        <td><%= link_to cliente.id, cliente_path(cliente) %></td>
+        <td><%= link_to cliente.cartao, cliente_path(cliente) %></td>
         <td><%= cliente.nome %></td>
-        <td><%= cliente.grupocliente.descricao %></td>
-        <td><%= link_to 'Ver', cliente %></td>
-        <td><%= link_to 'Editar', edit_cliente_path(cliente) %></td>
-        <td><%= link_to 'Apagar', cliente, method: :delete, data: { confirm: 'Tens a certeza?' } %></td>
+        <td><%= cliente.loja.descricao %></td>
+        <!--><td><%= cliente.data_nasc %></td>
+        <td><%= cliente.obs %></td>
+        <td><%= cliente.rua %></td>
+        <td><%= cliente.acumulado %></td>
+        <td><%= cliente.activo %></td>
+        <td><%= cliente.profissao_id %></td>
+        <td><%= cliente.grupocliente_id %></td>
+        <td><%= cliente.localidade_id %></td>
+        <td><%= cliente.loja_id %></td>
+        <td><%= cliente.vendedor_id %></td>
+        <td><%= cliente.sexo_id %></td>
+        <td><%=l cliente.created_at %></td></-->
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_cliente_path(cliente), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      cliente_path(cliente),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'Novo cliente', new_cliente_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_cliente_path,
+            :class => 'btn btn-primary' %>
