--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -1,69 +1,45 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Cliente -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Cartao:</strong>
-  <%= @cliente.cartao %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:cartao) %>:</strong></dt>
+  <dd><%= @cliente.cartao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @cliente.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:data_nasc) %>:</strong></dt>
+  <dd><%= @cliente.data_nasc %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:obs) %>:</strong></dt>
+  <dd><%= @cliente.obs %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:rua) %>:</strong></dt>
+  <dd><%= @cliente.rua %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:acumulado) %>:</strong></dt>
+  <dd><%= @cliente.acumulado %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:activo) %>:</strong></dt>
+  <dd><%= @cliente.activo %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:profissao_id) %>:</strong></dt>
+  <dd><%= @cliente.profissao.descricao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:grupocliente_id) %>:</strong></dt>
+  <dd><%= @cliente.grupocliente.descricao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:localidade_id) %>:</strong></dt>
+  <dd><%= @cliente.localidade.localidade %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:loja_id) %>:</strong></dt>
+  <dd><%= @cliente.loja.descricao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:vendedor_id) %>:</strong></dt>
+  <dd><%= @cliente.vendedor.descricao %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:sexo_id) %>:</strong></dt>
+  <dd><%= @cliente.sexo.descricao %></dd>
+</dl>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @cliente.nome %>
-</p>
-
-<p>
-  <strong>Data nasc:</strong>
-  <%= @cliente.data_nasc %>
-</p>
-
-<p>
-  <strong>Obs:</strong>
-  <%= @cliente.obs %>
-</p>
-
-<p>
-  <strong>Rua:</strong>
-  <%= @cliente.rua %>
-</p>
-
-<p>
-  <strong>Acumulado:</strong>
-  <%= @cliente.acumulado %>
-</p>
-
-<p>
-  <strong>Activo:</strong>
-  <%= @cliente.activo %>
-</p>
-
-<p>
-  <strong>Profissao:</strong>
-  <%= @cliente.profissao.descricao %>
-</p>
-
-<p>
-  <strong>Grupocliente:</strong>
-  <%= @cliente.grupocliente.descricao %>
-</p>
-
-<p>
-  <strong>Localidade:</strong>
-  <%= @cliente.localidade.localidade %>
-</p>
-
-<p>
-  <strong>Loja:</strong>
-  <%= @cliente.loja.descricao %>
-</p>
-
-<p>
-  <strong>Vendedor:</strong>
-  <%= @cliente.vendedor.descricao %>
-</p>
-
-<p>
-  <strong>Sexo:</strong>
-  <%= @cliente.sexo.descricao %>
-</p>
-
-<%= link_to 'Editar', edit_cliente_path(@cliente) %> |
-<%= link_to 'Voltar', clientes_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              clientes_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_cliente_path(@cliente), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              cliente_path(@cliente),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
