--- a/app/views/grupoclientes/_form.html.erb
+++ b/app/views/grupoclientes/_form.html.erb
@@ -1,25 +1,20 @@
-<%= form_for(@grupocliente) do |f| %>
-  <% if @grupocliente.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@grupocliente.errors.count, "error") %> prohibited this grupocliente from being saved:</h2>
-
-      <ul>
-      <% @grupocliente.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @grupocliente, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :descricao, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :descricao, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :racio, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :racio, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :descricao %><br>
-    <%= f.text_field :descricao %>
-  </div>
-  <div class="field">
-    <%= f.label :racio %><br>
-    <%= f.text_field :racio %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                grupoclientes_path, :class => 'btn' %>
   </div>
 <% end %>
