--- a/app/views/grupoclientes/edit.html.erb
+++ b/app/views/grupoclientes/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing grupocliente</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @grupocliente %> |
-<%= link_to 'Back', grupoclientes_path %>
+<%- model_class = Grupocliente -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
