--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,9 +49,16 @@
           <a class="brand" href="#">Fideliza</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+            	
+              <li><%= link_to "Clientes", "/clientes"  %></li>
+              <li><%= link_to "Perfil cliente", "/perfils"  %></li>
+              <li><%= link_to "Grupo Clientes", "/grupoclientes"  %></li>
+              <li><%= link_to "Profissoes", "/profissaos"  %></li>
+              <li><%= link_to "Paises", "/pais"  %></li>
+              <li><%= link_to "Localidades", "/localidades"  %></li>
+              <li><%= link_to "Vendedores", "/vendedors"  %></li>
+              <li><%= link_to "Lojas", "/lojas"  %></li>
+              
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -65,17 +72,6 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="span3">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div></--><!--/span-->
-      </div><!--/row-->
 
       <footer>
         <p>&copy; Company 2014</p>
