--- a/app/views/localidades/index.html.erb
+++ b/app/views/localidades/index.html.erb
@@ -1,33 +1,42 @@
-<h1>Listing localidades</h1>
-
-<table>
+<%- model_class = Localidade -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Cod postal</th>
-      <th>Localidade</th>
-      <th>Cidade</th>
-      <th>Pais</th>
-
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:cod_postal) %></th>
+      <th><%= model_class.human_attribute_name(:localidade) %></th>
+      <th><%= model_class.human_attribute_name(:cidade) %></th>
+      <th><%= model_class.human_attribute_name(:pais_id) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @localidades.each do |localidade| %>
       <tr>
+        <td><%= link_to localidade.id, localidade_path(localidade) %></td>
         <td><%= localidade.cod_postal %></td>
         <td><%= localidade.localidade %></td>
         <td><%= localidade.cidade %></td>
-
-        <td><%= link_to 'Show', localidade %></td>
-        <td><%= link_to 'Edit', edit_localidade_path(localidade) %></td>
-        <td><%= link_to 'Destroy', localidade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= localidade.pais_id %></td>
+        <td><%=l localidade.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_localidade_path(localidade), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      localidade_path(localidade),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Localidade', new_localidade_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_localidade_path,
+            :class => 'btn btn-primary' %>
