--- a/app/views/lojas/index.html.erb
+++ b/app/views/lojas/index.html.erb
@@ -1,27 +1,36 @@
-<h1>Listing lojas</h1>
-
-<table>
+<%- model_class = Loja -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Descricao</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:descricao) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @lojas.each do |loja| %>
       <tr>
+        <td><%= link_to loja.id, loja_path(loja) %></td>
         <td><%= loja.descricao %></td>
-        <td><%= link_to 'Show', loja %></td>
-        <td><%= link_to 'Edit', edit_loja_path(loja) %></td>
-        <td><%= link_to 'Destroy', loja, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l loja.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_loja_path(loja), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      loja_path(loja),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Loja', new_loja_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_loja_path,
+            :class => 'btn btn-primary' %>
