--- a/app/views/lojas/show.html.erb
+++ b/app/views/lojas/show.html.erb
@@ -1,9 +1,21 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Loja -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Descricao:</strong>
-  <%= @loja.descricao %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:descricao) %>:</strong></dt>
+  <dd><%= @loja.descricao %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_loja_path(@loja) %> |
-<%= link_to 'Back', lojas_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              lojas_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_loja_path(@loja), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              loja_path(@loja),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
