--- a/app/views/pais/_form.html.erb
+++ b/app/views/pais/_form.html.erb
@@ -1,21 +1,14 @@
-<%= form_for(@pai) do |f| %>
-  <% if @pai.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pai.errors.count, "error") %> prohibited this pai from being saved:</h2>
-
-      <ul>
-      <% @pai.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @pai, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :descricao, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :descricao, :class => 'text_field' %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :descricao %><br>
-    <%= f.text_field :descricao %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                pais_path, :class => 'btn' %>
   </div>
 <% end %>
