--- a/app/views/pais/index.html.erb
+++ b/app/views/pais/index.html.erb
@@ -1,27 +1,36 @@
-<h1>Listing pais</h1>
-
-<table>
+<%- model_class = Pai -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Descricao</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:descricao) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @pais.each do |pai| %>
       <tr>
+        <td><%= link_to pai.id, pai_path(pai) %></td>
         <td><%= pai.descricao %></td>
-        <td><%= link_to 'Show', pai %></td>
-        <td><%= link_to 'Edit', edit_pai_path(pai) %></td>
-        <td><%= link_to 'Destroy', pai, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l pai.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_pai_path(pai), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      pai_path(pai),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Pai', new_pai_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_pai_path,
+            :class => 'btn btn-primary' %>
