--- a/app/views/pais/show.html.erb
+++ b/app/views/pais/show.html.erb
@@ -1,9 +1,21 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Pai -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Descricao:</strong>
-  <%= @pai.descricao %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:descricao) %>:</strong></dt>
+  <dd><%= @pai.descricao %></dd>
+</dl>
 
-<%= link_to 'Edit', edit_pai_path(@pai) %> |
-<%= link_to 'Back', pais_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              pais_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_pai_path(@pai), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              pai_path(@pai),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
