--- a/app/views/perfils/index.html.erb
+++ b/app/views/perfils/index.html.erb
@@ -1,27 +1,36 @@
-<h1>Listing perfils</h1>
-
-<table>
+<%- model_class = Perfil -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Descricao</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:descricao) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @perfils.each do |perfil| %>
       <tr>
+        <td><%= link_to perfil.id, perfil_path(perfil) %></td>
         <td><%= perfil.descricao %></td>
-        <td><%= link_to 'Show', perfil %></td>
-        <td><%= link_to 'Edit', edit_perfil_path(perfil) %></td>
-        <td><%= link_to 'Destroy', perfil, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l perfil.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_perfil_path(perfil), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      perfil_path(perfil),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Perfil', new_perfil_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_perfil_path,
+            :class => 'btn btn-primary' %>
