--- a/app/views/sexos/edit.html.erb
+++ b/app/views/sexos/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing sexo</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @sexo %> |
-<%= link_to 'Back', sexos_path %>
+<%- model_class = Sexo -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
