--- a/app/views/sexos/index.html.erb
+++ b/app/views/sexos/index.html.erb
@@ -1,27 +1,36 @@
-<h1>Listing sexos</h1>
-
-<table>
+<%- model_class = Sexo -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Descricao</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:descricao) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @sexos.each do |sexo| %>
       <tr>
+        <td><%= link_to sexo.id, sexo_path(sexo) %></td>
         <td><%= sexo.descricao %></td>
-        <td><%= link_to 'Show', sexo %></td>
-        <td><%= link_to 'Edit', edit_sexo_path(sexo) %></td>
-        <td><%= link_to 'Destroy', sexo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l sexo.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_sexo_path(sexo), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      sexo_path(sexo),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Sexo', new_sexo_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_sexo_path,
+            :class => 'btn btn-primary' %>
