adicionado aprecompiladores para o heroku

--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -95,11 +95,9 @@
 	</div>
 
 
- 
 
 
 
-  
 
 
 
@@ -107,6 +105,6 @@
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                clientes_path, :class => 'btn' %>
+                '/', :class => 'btn' %>
   </div>
 <% end %>
