--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,40 +1,44 @@
 <%- model_class = Cliente -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+
+<ul class="breadcrumb">
+	<li><strong><%= link_to model_class.model_name.human.pluralize.titleize, '/clientes' %></strong></li>
+</ul>
+
+<div class="table-responsive">
+	<table id="tabela" class="table table-striped table-condensed" >
+	  <thead>
+	    <tr>
+	      <th></th>
+	      <th><%=  model_class.human_attribute_name(:cartao) %></th>
+	      <th><%=  model_class.human_attribute_name(:nome) %></th>
+	      <th><%=  model_class.human_attribute_name(:loja) %></th>
+	
+	      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <% @clientes.each do |cliente| %>
+	      <tr>
+	        <td><%= link_to '<i class="icon-file"></i>'.html_safe, cliente_path(cliente) %></td>	      	
+	        <td><%= cliente.cartao %></td>
+	        <td><%= cliente.nome %></td>
+	        <td><%= cliente.loja.descricao %></td>
+
+	        <td>
+	          <%= link_to '<i class="icon-pencil"></i>'.html_safe,
+	                      	edit_cliente_path(cliente), :class => 'btn btn-mini' %>
+
+	          <%= link_to '<i class="icon-remove"></i>'.html_safe,
+	                      cliente_path(cliente),
+	                      :method => :delete,
+	                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+	                      :class => 'btn btn-mini btn-danger' %>
+	        </td>
+	      </tr>
+	    <% end %>
+	  </tbody>
+	</table>
 </div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:cartao) %></th>
-      <th><%= model_class.human_attribute_name(:nome) %></th>
-      <th><%= Loja %></th>
 
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @clientes.each do |cliente| %>
-      <tr>
-        <td><%= link_to cliente.id, cliente_path(cliente) %></td>
-        <td><%= link_to cliente.cartao, cliente_path(cliente) %></td>
-        <td><%= cliente.nome %></td>
-        <td><%= cliente.loja.descricao %></td>
-      
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_cliente_path(cliente), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      cliente_path(cliente),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_cliente_path,
-            :class => 'btn btn-primary' %>
+<%= link_to t('.new', :default => t("helpers.links.new")), new_cliente_path, :class => 'btn btn-success' %>
