--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,5 +1,9 @@
 <%- model_class = Cliente -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
-</div>
+
+<ul class="breadcrumb">
+	<li><strong><%= link_to model_class.model_name.human.pluralize.titleize, "/clientes"  %></strong>
+	 <span class="divider">/</span></li>
+	<li class="active"><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></li>
+</ul>
+    
 <%= render :partial => 'form' %>
