--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,8 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-
-    <div class="navbar navbar-fluid-top">
+		
+    <div class="navbar navbar-fluid-top"><!-- meter a preto: navbar-inverse  -->
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Fideliza</a>
+          <a class="brand" href="/clientes"><i class="icon-magnet white"></i> Fideliza</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
             	
