--- a/app/views/localidades/index.html.erb
+++ b/app/views/localidades/index.html.erb
@@ -1,42 +1,38 @@
 <%- model_class = Localidade -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
+ <h4><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h4>
+ 
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><i class="icon-file"></i></th>   	
       <th><%= model_class.human_attribute_name(:cod_postal) %></th>
       <th><%= model_class.human_attribute_name(:localidade) %></th>
       <th><%= model_class.human_attribute_name(:cidade) %></th>
-      <th><%= model_class.human_attribute_name(:pais_id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @localidades.each do |localidade| %>
       <tr>
-        <td><%= link_to localidade.id, localidade_path(localidade) %></td>
+        <td><%= link_to '<i class="icon-file"></i>'.html_safe, localidade_path(localidade) %></td>
         <td><%= localidade.cod_postal %></td>
         <td><%= localidade.localidade %></td>
         <td><%= localidade.cidade %></td>
-        <td><%= localidade.pais_id %></td>
-        <td><%=l localidade.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to '<i class="icon-pencil"></i>'.html_safe,
                       edit_localidade_path(localidade), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to '<i class="icon-remove"></i>'.html_safe,
                       localidade_path(localidade),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
+
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+ por aqui uma pesquisa por pais ?
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_localidade_path,
             :class => 'btn btn-primary' %>
