--- a/app/views/lojas/index.html.erb
+++ b/app/views/lojas/index.html.erb
@@ -1,26 +1,23 @@
 <%- model_class = Loja -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
+ <h4><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h4>
+ 
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th>#</th>
       <th><%= model_class.human_attribute_name(:descricao) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @lojas.each do |loja| %>
       <tr>
-        <td><%= link_to loja.id, loja_path(loja) %></td>
+        <td><%= link_to '<i class="icon-file"></i>'.html_safe, loja_path(loja) %></td>
         <td><%= loja.descricao %></td>
-        <td><%=l loja.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to '<i class="icon-pencil"></i>'.html_safe,
                       edit_loja_path(loja), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to '<i class="icon-remove"></i>'.html_safe,
                       loja_path(loja),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
