--- a/app/views/perfils/index.html.erb
+++ b/app/views/perfils/index.html.erb
@@ -1,26 +1,23 @@
 <%- model_class = Perfil -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
+<h4><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h4>
+
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th>#</th>
       <th><%= model_class.human_attribute_name(:descricao) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @perfils.each do |perfil| %>
       <tr>
-        <td><%= link_to perfil.id, perfil_path(perfil) %></td>
-        <td><%= perfil.descricao %></td>
-        <td><%=l perfil.created_at %></td>
+        <td><%= link_to '<i class="icon-file"></i>'.html_safe, perfil_path(perfil) %></td>
+        <td><%= perfil.descricao %></td> 
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to '<i class="icon-pencil"></i>'.html_safe,
                       edit_perfil_path(perfil), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to '<i class="icon-remove"></i>'.html_safe,
                       perfil_path(perfil),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
