--- a/app/views/vendedors/index.html.erb
+++ b/app/views/vendedors/index.html.erb
@@ -1,11 +1,10 @@
 <%- model_class = Vendedor -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
+ <h4><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h4>
+ 
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th>#</th>
       <th><%= model_class.human_attribute_name(:descricao) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -14,13 +13,13 @@
   <tbody>
     <% @vendedors.each do |vendedor| %>
       <tr>
-        <td><%= link_to vendedor.id, vendedor_path(vendedor) %></td>
+        <td><%= link_to '<i class="icon-file"></i>'.html_safe, vendedor_path(vendedor) %></td>
         <td><%= vendedor.descricao %></td>
         <td><%=l vendedor.created_at %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+          <%= link_to '<i class="icon-pencil"></i>'.html_safe,
                       edit_vendedor_path(vendedor), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+          <%= link_to '<i class="icon-remove"></i>'.html_safe,
                       vendedor_path(vendedor),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
