--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -1,8 +1,6 @@
 <%- model_class = Cliente -%>
 
-<ul class="breadcrumb">
-	<li><strong><%= link_to model_class.model_name.human.pluralize.titleize, '/clientes' %></strong></li>
-</ul>
+ <h4><%= model_class.model_name.human.pluralize.titleize %> </h4>
 
 <div class="table-responsive">
 	<table id="tabela" class="table table-striped table-condensed" >
